Implemented Block, chunk, if, assignment and return statements. TODO while, break and goto.

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Proj2</name>
+	<name>cop5556fa19_projectAssignments</name>
 	<comment></comment>
 	<projects>
 	</projects>
